<resources>

    <string name="app_name">My app</string>

    <string name="hello">Hello</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="start">Start</string>

    <string name="calculator">Calculator</string>
    <string name="weather">Weather</string>
    <string name="list">List</string>
    <string name="back">Back</string>

    <string name="text_calc_example">0</string>

    <string name="c">C</string>
    <string name="backspace">⌫</string>
    <string name="percent">%</string>
    <string name="division">/</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="multiplication">*</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="subtraction">−</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="addition">+</string>
    <string name="btn0">0</string>
    <string name="coma">.</string>
    <string name="equally">=</string>
    <string name="plus_or_minus">+/-</string>

    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="welcome_toast">Добро пожаловать!</string>
    <string name="email_error">Введите корректный email</string>
    <string name="password_error">Пароль должен быть больше 6 символов</string>

    <string name="tool_bar_title_weather">Weather</string>
    <string name="tool_bar_title_second">SecondActivity</string>
    <string name="tool_bar_title_list">List</string>
    <string name="tool_bar_title_calculator">Calculator</string>

    <string name="date_format">Дата: %1$s</string>
    <string name="weather_format">Погода: %1$s</string>
    <string name="temperature_format">Темп: %1$d – %2$d °C</string>
    <string name="wind_format">Ветер: до %1$d м/с</string>

    <string name="year_format">Year: %1$d</string>
    <string name="price_format">Price: $%1$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>