<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".second.presentation.ui.SecondFragment">

        <androidx.appcompat.widget.Toolbar
            style="@style/tool_bar_style"
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="@dimen/tool_bar_elevation"
            android:layout_marginTop="@dimen/tool_bar_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/tool_bar_title_second" />

        <TextView
            style="@style/text_view_style"
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="@dimen/textSize"
            android:layout_marginTop="@dimen/text_view_margin_top_second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/text_view_style"
            android:id="@+id/name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hello" />

        <com.google.android.material.button.MaterialButton
            style="@style/button_style"
            android:id="@+id/weather_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/weather"
            android:textSize="@dimen/textSize"
            app:icon="@drawable/weath"
            app:iconGravity="end"
            app:iconSize="@dimen/iconSize"
            app:layout_constraintTop_toBottomOf="@+id/name_view"
            app:layout_constraintBottom_toTopOf="@+id/calculator_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            style="@style/button_style"
            android:id="@+id/calculator_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/calculator"
            android:textSize="@dimen/textSize"
            app:icon="@drawable/calc"
            app:iconGravity="end"
            app:iconSize="@dimen/iconSize"
            app:layout_constraintTop_toBottomOf="@+id/weather_button"
            app:layout_constraintBottom_toTopOf="@+id/list_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            style="@style/button_style"
            android:id="@+id/list_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/list"
            android:textSize="@dimen/textSize"
            app:icon="@drawable/list"
            app:iconGravity="end"
            app:iconSize="@dimen/iconSize"
            app:layout_constraintTop_toBottomOf="@+id/calculator_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>