<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">


    <androidx.appcompat.widget.Toolbar
        style="@style/tool_bar_style"
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="SecondActivity"
        android:layout_marginTop="24dp"/>

    <TextView
        style="@style/text_view_style"
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/text_view_margin_top_second"/>

    <TextView
        style="@style/text_view_style"
        android:id="@+id/name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello" />

    <com.google.android.material.button.MaterialButton
        style="@style/button_style"
        android:id="@+id/weather_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/weather"
        android:textSize="@dimen/textSize"
        app:icon="@drawable/weath"
        app:iconGravity="end"
        app:iconSize="@dimen/iconSize"
        app:layout_constraintBottom_toTopOf="@+id/calculator_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_view" />

    <com.google.android.material.button.MaterialButton
        style="@style/button_style"
        android:id="@+id/calculator_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calculator"
        android:textSize="@dimen/textSize"
        app:icon="@drawable/calc"
        app:iconGravity="end"
        app:iconSize="@dimen/iconSize"
        app:layout_constraintBottom_toTopOf="@+id/list_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_button" />

    <com.google.android.material.button.MaterialButton
        style="@style/button_style"
        android:id="@+id/list_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/list"
        android:textSize="@dimen/textSize"
        app:icon="@drawable/list"
        app:iconGravity="end"
        app:iconSize="@dimen/iconSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculator_button" />

</androidx.constraintlayout.widget.ConstraintLayout>